--- a/formulario.html
+++ b/formulario.html
@@ -33,8 +33,8 @@
     <h2>Lista de invitados</h2>
 
   </div>
-
-  <script src="../formulario.js"></script>
+<!-- Corregir ruta script -->
+  <script src="formulario.js"></script>
 </body>
 
 </html>
